Simplified and reorganized stylesheet

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!-- Development Branch Test-->
+<!-- Jadnell H. Reyes Pérez -->
+<!-- October 17th 2023 -->
+<!-- Version: 0.8 -->
 <?xml version = "1.0"?>
 <!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
@@ -42,6 +44,7 @@
     <title>Jadnell Reyes' Portfolio</title>
   </head>
 
+  <!-- Video Background -->
   <video
     class="background"
     src="/Images/Videos/background.mp4"
@@ -53,7 +56,7 @@
   <body>
     <!-- Menu Button -->
     <div class="navBar">
-      <div class="menu">
+      <div>
         <div id="selectMenu">
           <button class="menuButtons" type="button">
             <img
@@ -123,13 +126,7 @@
 
     <!-- Theme Changer Button -->
     <div id="themeChanger">
-      <button
-        id="themeChangerButton"
-        class="menuButtons"
-        type="button"
-        onclick=""
-        disabled
-      >
+      <button class="menuButtons" type="button" onclick="" disabled>
         <img
           src="Images/Icons/sun.svg"
           title="Change Theme"
@@ -141,7 +138,7 @@
     </div>
 
     <!-- ABOUT ME PAGE -->
-    <section id="aboutMePage" class="animatedSection leftSlide">
+    <section class="animatedSection leftSlide">
       <!-- Image and Info Cards Containers -->
       <div class="container text-center">
         <div class="row align-items-center">
@@ -235,7 +232,7 @@
     </section>
 
     <!-- TECH STACK PAGE -->
-    <section id="techStackPage" class="animatedSection">
+    <section class="animatedSection">
       <div class="container">
         <h2 class="sectionHeadings">Technologies Stack:</h2>
       </div>
@@ -1586,7 +1583,7 @@
     </section>
 
     <!-- PROJECTS PAGE -->
-    <section id="projectsPage" class="animatedSection">
+    <section class="animatedSection">
       <div class="container">
         <h2 class="sectionHeadings">Projects:</h2>
       </div>
@@ -2001,35 +1998,42 @@
                   <div class="mySlides2 fade">
                     <img
                       class="projectImages"
-                      src="Images/Project Pictures/depo1.png"
+                      src="Images/Project Pictures/portfolio1.jpg"
                     />
                   </div>
 
                   <div class="mySlides2 fade">
                     <img
                       class="projectImages"
-                      src="Images/Project Pictures/depo2.png"
+                      src="Images/Project Pictures/portfolio2.png"
                     />
                   </div>
 
                   <div class="mySlides2 fade">
                     <img
                       class="projectImages"
-                      src="Images/Project Pictures/depo3.png"
+                      src="Images/Project Pictures/portfolio3.jpg"
                     />
                   </div>
 
                   <div class="mySlides2 fade">
                     <img
                       class="projectImages"
-                      src="Images/Project Pictures/depo4.png"
+                      src="Images/Project Pictures/portfolio4.png"
                     />
                   </div>
 
                   <div class="mySlides2 fade">
                     <img
                       class="projectImages"
-                      src="Images/Project Pictures/depo5.png"
+                      src="Images/Project Pictures/portfolio5.png"
+                    />
+                  </div>
+
+                  <div class="mySlides2 fade">
+                    <img
+                      class="projectImages"
+                      src="Images/Project Pictures/portfolio6.png"
                     />
                   </div>
 
@@ -2056,6 +2060,7 @@
                   <span class="dot2" onclick="currentSlide(3, 1)"></span>
                   <span class="dot2" onclick="currentSlide(4, 1)"></span>
                   <span class="dot2" onclick="currentSlide(5, 1)"></span>
+                  <span class="dot2" onclick="currentSlide(6, 1)"></span>
                 </div>
 
                 <br />
@@ -2625,12 +2630,12 @@
       </div>
     </section>
 
-    <section id="contactPage" class="animatedSection">
+    <section class="animatedSection">
       <div class="container">
         <h2 class="sectionHeadings">Contact:</h2>
       </div>
 
-      <div id="socialMediaBar">
+      <div>
         <div class="container text-center">
           <!-- Social Media Buttons Column -->
           <div class="row">
@@ -2835,7 +2840,7 @@
       </div>
       <!-- end contact section-->
     </section>
-    <section id="footer" class="animatedSection">
+    <section class="animatedSection">
       <footer>
         Copyright © 2023. All Rights Reserved
         <br />
