--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
     />
 
     <!-- Stylesheet Link-->
-    <link href="./Styles/dayDesign.css" type="text/css" rel="stylesheet" />
+    <link
+      id="theme"
+      href="./Styles/lightDesign.css"
+      type="text/css"
+      rel="stylesheet"
+    />
 
     <!-- Bootstrap Link-->
     <link
@@ -47,11 +52,15 @@
   <!-- Video Background -->
   <video
     class="background"
-    src="/Images/Videos/background.mp4"
     autoplay
     loop
     muted
-  ></video>
+    <source
+    id="videoSource"
+    src="Images/Videos/background.mp4"
+  >
+    >
+  </video>
 
   <body>
     <!-- Menu Button -->
@@ -126,12 +135,11 @@
 
     <!-- Theme Changer Button -->
     <div id="themeChanger">
-      <button class="menuButtons" type="button" onclick="" disabled>
+      <button id="themeChangerButton" class="menuButtons" type="button">
         <img
-          src="Images/Icons/sun.svg"
+          id="themeChangerButtonIcon"
+          src="Images/Icons/moon.svg"
           title="Change Theme"
-          width="35px"
-          height="35px"
           alt="Theme changing button"
         />
       </button>
@@ -2037,6 +2045,13 @@
                     />
                   </div>
 
+                  <div class="mySlides2 fade">
+                    <img
+                      class="projectImages"
+                      src="Images/Project Pictures/portfolio7.png"
+                    />
+                  </div>
+
                   <!-- Next and previous buttons -->
                   <a class="prev" onclick="plusSlides(-1, 1)">
                     <img
@@ -2061,6 +2076,7 @@
                   <span class="dot2" onclick="currentSlide(4, 1)"></span>
                   <span class="dot2" onclick="currentSlide(5, 1)"></span>
                   <span class="dot2" onclick="currentSlide(6, 1)"></span>
+                  <span class="dot2" onclick="currentSlide(7, 1)"></span>
                 </div>
 
                 <br />
@@ -2754,7 +2770,8 @@
                       >
                         <h6>Resumé.pdf</h6>
                         <img
-                          src="Images/Icons/downloadArrow.svg"
+                          id="resumeDownload"
+                          src="Images/Icons/downloadArrowD.svg"
                           title="Resume Download"
                           width="20px"
                           height="20px"
@@ -2855,6 +2872,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="scripts/menuButton.js"></script>
+    <script src="scripts/themeChangerButton.js"></script>
     <script src="scripts/animationsOnScroll.js"></script>
     <script src="scripts/techStackButtons.js"></script>
     <script src="scripts/imageSlideshow.js"></script>
