--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <ul id="menuButtonsList" class="hide">
           <li class="options">
             <button class="menuButtons"" type=" button"
-            onclick="window.location.href='#aboutMePage';">
+            onclick="window.location.href='#aboutMeSection';">
             <img
               src="Images/Icons/aboutMe.svg"
               title="About Me"
@@ -95,7 +95,7 @@
 
           <li class="options">
             <button class="menuButtons"" type=" button"
-            onclick="window.location.href='#techStackPage';">
+            onclick="window.location.href='#techStackSection';">
             <img
               src="Images/Icons/layers.svg"
               title="Tech Stack"
@@ -107,7 +107,7 @@
           <h6 class="menuButtonsTitle">Tech Stack</h6>
           <li class="options">
             <button class="menuButtons"" type=" button"
-            onclick="window.location.href='#projectsPage';">
+            onclick="window.location.href='#projectsSection';">
             <img
               src="Images/Icons/projects.svg"
               title="Projects"
@@ -119,7 +119,7 @@
           <h6 class="menuButtonsTitle">Projects</h6>
           <li class="options">
             <button class="menuButtons"" type=" button"
-            onclick="window.location.href='#contactPage';">
+            onclick="window.location.href='#contactSection';">
             <img
               src="Images/Icons/contactInfo.svg"
               title="Contact Information"
@@ -146,7 +146,7 @@
     </div>
 
     <!-- ABOUT ME PAGE -->
-    <section class="animatedSection leftSlide">
+    <section id="aboutMeSection" class="animatedSection leftSlide">
       <!-- Image and Info Cards Containers -->
       <div class="container text-center">
         <div class="row align-items-center">
@@ -240,7 +240,7 @@
     </section>
 
     <!-- TECH STACK PAGE -->
-    <section class="animatedSection">
+    <section id="techStackSection" class="animatedSection">
       <div class="container">
         <h2 class="sectionHeadings">Technologies Stack:</h2>
       </div>
@@ -1591,7 +1591,7 @@
     </section>
 
     <!-- PROJECTS PAGE -->
-    <section class="animatedSection">
+    <section id="projectsSection" class="animatedSection">
       <div class="container">
         <h2 class="sectionHeadings">Projects:</h2>
       </div>
@@ -2645,8 +2645,8 @@
         <!-- End Projects Container-->
       </div>
     </section>
-
-    <section class="animatedSection">
+<!-- CONTACT INFORMATION SECTION -->
+    <section id="contactSection" class="animatedSection">
       <div class="container">
         <h2 class="sectionHeadings">Contact:</h2>
       </div>
