Changed video folder location & themeChangerButton color

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     muted
     <source
     id="videoSource"
-    src="Images/Videos/background.mp4"
+    src="Videos/background.mp4"
   >
     >
   </video>
@@ -2645,7 +2645,7 @@
         <!-- End Projects Container-->
       </div>
     </section>
-<!-- CONTACT INFORMATION SECTION -->
+    <!-- CONTACT INFORMATION SECTION -->
     <section id="contactSection" class="animatedSection">
       <div class="container">
         <h2 class="sectionHeadings">Contact:</h2>
