Added alt attribute to projectImages

--- a/index.html
+++ b/index.html
@@ -1769,6 +1769,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/depo1.png"
+                      alt="Image of the Fines Section of the DEPO Web Application."
                     />
                   </div>
 
@@ -1776,6 +1777,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/depo2.png"
+                      alt="Image of the Details Section of the DEPO Web Application."
                     />
                   </div>
 
@@ -1783,6 +1785,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/depo3.png"
+                      alt="Image of the Purchases Section of the DEPO Web Application."
                     />
                   </div>
 
@@ -1790,6 +1793,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/depo4.png"
+                      alt="Image of the Cases Section of the DEPO Web Application."
                     />
                   </div>
 
@@ -1797,6 +1801,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/depo5.png"
+                      alt="Image of the Darshboard of the DEPO Web Application."
                     />
                   </div>
 
@@ -2008,6 +2013,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/portfolio1.jpg"
+                      alt="Image of a sketch I made August 6, 2023 of how I wanted the About Me Section of my Portfolio."
                     />
                   </div>
 
@@ -2015,6 +2021,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/portfolio2.png"
+                      alt="Image of a previous version of the Portfolio."
                     />
                   </div>
 
@@ -2022,6 +2029,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/portfolio3.jpg"
+                      alt="Image of a sketch I made of how I wanted the Contact Section of my Portfolio."
                     />
                   </div>
 
@@ -2029,6 +2037,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/portfolio4.png"
+                      alt="Image of the current Contact Section in Light Mode."
                     />
                   </div>
 
@@ -2036,6 +2045,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/portfolio5.png"
+                      alt="Image of the current Technologies Stack Section in Light Mode."
                     />
                   </div>
 
@@ -2043,6 +2053,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/portfolio6.png"
+                      alt="Image of the current About Me Section in Light Mode."
                     />
                   </div>
 
@@ -2050,6 +2061,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/portfolio7.png"
+                      alt="Image of the current About Me Section in Dark Mode."
                     />
                   </div>
 
@@ -2206,6 +2218,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/hareshQuiz1.png"
+                      alt="Image of the main menu of Haresh Quiz Game."
                     />
                   </div>
 
@@ -2213,6 +2226,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/hareshQuiz2.png"
+                      alt="Image of the instructions menu of Haresh Quiz Game."
                     />
                   </div>
 
@@ -2220,6 +2234,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/hareshQuiz3.png"
+                      alt="Image of when you get a correct answer in Haresh Quiz Game."
                     />
                   </div>
 
@@ -2227,6 +2242,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/hareshQuiz4.png"
+                      alt="Image of when you get an incorrect answer in Haresh Quiz Game."
                     />
                   </div>
 
@@ -2234,6 +2250,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/hareshQuiz5.png"
+                      alt="Image of how many correct answers did you get when winning."
                     />
                   </div>
 
@@ -2409,6 +2426,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/DCmotor1.png"
+                      alt="DC Motor Operation Truth Table."
                     />
                   </div>
 
@@ -2416,6 +2434,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/DCmotor2.png"
+                      alt="Table of the keyboard inputs and their corresponding outputs."
                     />
                   </div>
 
@@ -2423,6 +2442,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/DCmotor3.png"
+                      alt="DC Motor Circuit using a Pulse Width Modulation input.."
                     />
                   </div>
 
@@ -2593,6 +2613,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/stepperMotor1.png"
+                      alt="Image of Stepper Motor 28BYJ-48."
                     />
                   </div>
 
@@ -2600,6 +2621,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/stepperMotor2.png"
+                      alt="Table of the keyboard inputs and their corresponding outputs."
                     />
                   </div>
 
@@ -2607,6 +2629,7 @@
                     <img
                       class="projectImages"
                       src="Images/Project Pictures/stepperMotor3.png"
+                      alt="Image of the stepper motor functioning, taken from the video source found in this card."
                     />
                   </div>
 
