--- a/index.html
+++ b/index.html
@@ -152,15 +152,14 @@
       <div class="container text-center">
         <div class="row align-items-center">
           <div class="col">
-            <a
-              ><img
-                class="mainPictures"
-                src="Images/Pictures/ME.png"
-                title="Hello! This is me"
-                width="225px"
-                height="225px"
-                alt="A picture of Jadnell Reyes was supposed to appear here..."
-            /></a>
+            <img
+              class="mainPictures"
+              src="Images/Pictures/ME.png"
+              title="Hello! This is me"
+              width="225px"
+              height="225px"
+              alt="A picture of Jadnell Reyes was supposed to appear here..."
+            />
           </div>
           <!--Text Greeting-->
           <div class="col">
@@ -301,10 +300,10 @@
                       </div>
 
                       <div class="row">
-                        <div class="col readMoreBottom">
+                        <div class="col">
                           <div class="container">
                             <button
-                              id="readMoreButton"
+                              class="readMoreButton"
                               onclick="window.location.href='https://www.w3.org/Style/CSS/Overview.en.html';"
                             >
                               <b class="readMoreText">Read More</b>
@@ -371,7 +370,7 @@
                       <div class="container">
                         <div class="space25px"></div>
                         <button
-                          id="readMoreButton"
+                          class="readMoreButton"
                           onclick="window.location.href='https://www.w3schools.com/cpp/cpp_intro.asp';"
                         >
                           <b class="readMoreText">Read More</b>
@@ -439,7 +438,7 @@
                       <div class="container">
                         <div class="space25px"></div>
                         <button
-                          id="readMoreButton"
+                          class="readMoreButton"
                           onclick="window.location.href='https://dart.dev/overview';"
                         >
                           <b class="readMoreText">Read More</b>
@@ -509,7 +508,7 @@
                       <div class="container">
                         <div class="space25px"></div>
                         <button
-                          id="readMoreButton"
+                          class="readMoreButton"
                           onclick="window.location.href='https://html.com/';"
                         >
                           <b class="readMoreText">Read More</b>
@@ -575,7 +574,7 @@
                       <div class="container">
                         <div class="space25px"></div>
                         <button
-                          id="readMoreButton"
+                          class="readMoreButton"
                           onclick="window.location.href='https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript';"
                         >
                           <b class="readMoreText">Read More</b>
@@ -645,7 +644,7 @@
                       <div class="container">
                         <div class="space25px"></div>
                         <button
-                          id="readMoreButton"
+                          class="readMoreButton"
                           onclick="window.location.href='https://www.mathworks.com/products/matlab.html';"
                         >
                           <b class="readMoreText">Read More</b>
@@ -713,7 +712,7 @@
                       <div class="container">
                         <div class="space25px"></div>
                         <button
-                          id="readMoreButton"
+                          class="readMoreButton"
                           onclick="window.location.href='https://docs.python.org/3/faq/general.html#what-is-python';"
                         >
                           <b class="readMoreText">Read More</b>
@@ -779,7 +778,7 @@
                       <div class="container">
                         <div class="space25px"></div>
                         <button
-                          id="readMoreButton"
+                          class="readMoreButton"
                           onclick="window.location.href='https://aws.amazon.com/what-is/sql/';"
                         >
                           <b class="readMoreText">Read More</b>
@@ -859,7 +858,7 @@
                       <div class="container">
                         <div class="space25px"></div>
                         <button
-                          id="readMoreButton"
+                          class="readMoreButton"
                           onclick="window.location.href='https://developer.android.com/studio/intro';"
                         >
                           <b class="readMoreText">Read More</b>
@@ -928,7 +927,7 @@
                       <div class="container">
                         <div class="space25px"></div>
                         <button
-                          id="readMoreButton"
+                          class="readMoreButton"
                           onclick="window.location.href='https://www.arduino.cc/en/Guide/Introduction';"
                         >
                           <b class="readMoreText">Read More</b>
@@ -998,7 +997,7 @@
                       <div class="container">
                         <div class="space25px"></div>
                         <button
-                          id="readMoreButton"
+                          class="readMoreButton"
                           onclick="window.location.href='https://docs.github.com/en/get-started/quickstart/hello-world';"
                         >
                           <b class="readMoreText">Read More</b>
@@ -1068,7 +1067,7 @@
                       <div class="container">
                         <div class="space25px"></div>
                         <button
-                          id="readMoreButton"
+                          class="readMoreButton"
                           onclick="window.location.href='https://jupyter-notebook.readthedocs.io/en/stable/';"
                         >
                           <b class="readMoreText">Read More</b>
@@ -1139,7 +1138,7 @@
                       <div class="container">
                         <div class="space25px"></div>
                         <button
-                          id="readMoreButton"
+                          class="readMoreButton"
                           onclick="window.location.href='https://www.raspberrypi.com/for-home/';"
                         >
                           <b class="readMoreText">Read More</b>
@@ -1209,7 +1208,7 @@
                       <div class="container">
                         <div class="space25px"></div>
                         <button
-                          id="readMoreButton"
+                          class="readMoreButton"
                           onclick="window.location.href='https://www.virtualbox.org/wiki/VirtualBox';"
                         >
                           <b class="readMoreText">Read More</b>
@@ -1273,7 +1272,7 @@
                       <div class="container">
                         <div class="space25px"></div>
                         <button
-                          id="readMoreButton"
+                          class="readMoreButton"
                           onclick="window.location.href='https://visualstudio.microsoft.com/#vs-section';"
                         >
                           <b class="readMoreText">Read More</b>
@@ -1345,7 +1344,7 @@
                       <div class="container">
                         <div class="space25px"></div>
                         <button
-                          id="readMoreButton"
+                          class="readMoreButton"
                           onclick="window.location.href='https://code.visualstudio.com/docs/supporting/faq';"
                         >
                           <b class="readMoreText">Read More</b>
@@ -1422,7 +1421,7 @@
                       <div class="container">
                         <div class="space25px"></div>
                         <button
-                          id="readMoreButton"
+                          class="readMoreButton"
                           onclick="window.location.href='https://www.w3schools.com/whatis/whatis_bootstrap.asp';"
                         >
                           <b class="readMoreText">Read More</b>
@@ -1490,7 +1489,7 @@
                       <div class="container">
                         <div class="space25px"></div>
                         <button
-                          id="readMoreButton"
+                          class="readMoreButton"
                           onclick="window.location.href='https://www.djangoproject.com/';"
                         >
                           <b class="readMoreText">Read More</b>
@@ -1561,7 +1560,7 @@
                       <div class="container">
                         <div class="space25px"></div>
                         <button
-                          id="readMoreButton"
+                          class="readMoreButton"
                           onclick="window.location.href='https://flutter.dev/';"
                         >
                           <b class="readMoreText">Read More</b>
@@ -1806,19 +1805,22 @@
                   </div>
 
                   <!-- Next and previous buttons -->
-                  <a class="prev" onclick="plusSlides(-1, 0)">
+                  <button class="prev" onclick="plusSlides(-1, 0)">
                     <img
                       src="Images/Icons/prevImage.svg"
                       width="30px"
                       height="30px"
-                  /></a>
-                  <a class="next" onclick="plusSlides(1, 0)">
+                      alt="Previous picture arrow button."
+                    />
+                  </button>
+                  <button class="next" onclick="plusSlides(1, 0)">
                     <img
                       src="Images/Icons/nextImage.svg"
                       width="30px"
                       height="30px"
+                      alt="Next picture arrow button."
                     />
-                  </a>
+                  </button>
                 </div>
 
                 <!-- The dots/circles -->
@@ -2066,19 +2068,22 @@
                   </div>
 
                   <!-- Next and previous buttons -->
-                  <a class="prev" onclick="plusSlides(-1, 1)">
+                  <button class="prev" onclick="plusSlides(-1, 1)">
                     <img
                       src="Images/Icons/prevImage.svg"
                       width="30px"
                       height="30px"
-                  /></a>
-                  <a class="next" onclick="plusSlides(1, 1)">
+                      alt="Previous picture arrow button."
+                    />
+                  </button>
+                  <button class="next" onclick="plusSlides(1, 1)">
                     <img
                       src="Images/Icons/nextImage.svg"
                       width="30px"
                       height="30px"
+                      alt="Next picture arrow button."
                     />
-                  </a>
+                  </button>
                 </div>
 
                 <!-- The dots/circles -->
@@ -2255,19 +2260,22 @@
                   </div>
 
                   <!-- Next and previous buttons -->
-                  <a class="prev" onclick="plusSlides(-1, 2)">
+                  <button class="prev" onclick="plusSlides(-1, 2)">
                     <img
                       src="Images/Icons/prevImage.svg"
                       width="30px"
                       height="30px"
-                  /></a>
-                  <a class="next" onclick="plusSlides(1, 2)">
+                      alt="Previous picture arrow button."
+                    />
+                  </button>
+                  <button class="next" onclick="plusSlides(1, 2)">
                     <img
                       src="Images/Icons/nextImage.svg"
                       width="30px"
                       height="30px"
+                      alt="Next picture arrow button."
                     />
-                  </a>
+                  </button>
                 </div>
 
                 <!-- The dots/circles -->
@@ -2447,19 +2455,22 @@
                   </div>
 
                   <!-- Next and previous buttons -->
-                  <a class="prev" onclick="plusSlides(-1, 3)">
+                  <button class="prev" onclick="plusSlides(-1, 3)">
                     <img
                       src="Images/Icons/prevImage.svg"
                       width="30px"
                       height="30px"
-                  /></a>
-                  <a class="next" onclick="plusSlides(1, 3)">
+                      alt="Previous picture arrow button."
+                    />
+                  </button>
+                  <button class="next" onclick="plusSlides(1, 3)">
                     <img
                       src="Images/Icons/nextImage.svg"
                       width="30px"
                       height="30px"
+                      alt="Next picture arrow button."
                     />
-                  </a>
+                  </button>
                 </div>
 
                 <!-- The dots/circles -->
@@ -2634,19 +2645,22 @@
                   </div>
 
                   <!-- Next and previous buttons -->
-                  <a class="prev" onclick="plusSlides(-1, 4)">
+                  <button class="prev" onclick="plusSlides(-1, 4)">
                     <img
                       src="Images/Icons/prevImage.svg"
                       width="30px"
                       height="30px"
-                  /></a>
-                  <a class="next" onclick="plusSlides(1, 4)">
+                      alt="Previous picture arrow button."
+                    />
+                  </button>
+                  <button class="next" onclick="plusSlides(1, 4)">
                     <img
                       src="Images/Icons/nextImage.svg"
                       width="30px"
                       height="30px"
+                      alt="Next picture arrow button."
                     />
-                  </a>
+                  </button>
                 </div>
 
                 <!-- The dots/circles -->
