Updated Jupyter Notebook with important information

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       </button>
     </div>
 
-    <!-- ABOUT ME PAGE -->
+    <!-- ABOUT ME SECTION -->
     <section id="aboutMeSection" class="animatedSection leftSlide">
       <!-- Image and Info Cards Containers -->
       <div class="container text-center">
@@ -239,7 +239,7 @@
       </div>
     </section>
 
-    <!-- TECH STACK PAGE -->
+    <!-- TECH STACK SECTION -->
     <section id="techStackSection" class="animatedSection">
       <div class="container">
         <h2 class="sectionHeadings">Technologies Stack:</h2>
@@ -1590,7 +1590,7 @@
       </div>
     </section>
 
-    <!-- PROJECTS PAGE -->
+    <!-- PROJECTS SECTION -->
     <section id="projectsSection" class="animatedSection">
       <div class="container">
         <h2 class="sectionHeadings">Projects:</h2>
@@ -2686,7 +2686,7 @@
     <!-- CONTACT INFORMATION SECTION -->
     <section id="contactSection" class="animatedSection">
       <div class="container">
-        <h2 class="sectionHeadings">Contact:</h2>
+        <h2 class="sectionHeadings">Contact Information:</h2>
       </div>
 
       <div>
