Added a landing page and started working on about me section

--- a/index.html
+++ b/index.html
@@ -104,25 +104,39 @@
       </div>
     </div>
 
-    <!-- ABOUT ME SECTION -->
-    <section id="aboutMeSection" class="animatedSection leftSlide">
-      <div class="HEADINGS">ABOUT ME</div>
-
-      <!-- Image and Info Cards Containers -->
+    <!-- LANDING SECTION -->
+    <section id="landingSection" class="animatedSection leftSlide">
+      <!-- Intro and Image -->
       <div class="container text-center">
         <div class="row align-items-center">
           <div class="col">
+            <div id="hello">
+              <h1>Hello World! I'm</h1>
+              <h1>Jadnell H. Reyes Perez</h1>
+              <h3>Computer Engineer</h3>
+            </div>
+            <br />
+            <div id="summary">
+              A Full Stack Web Developer, Designer and Engineer graduated from
+              the Polytechnic University of Puerto Rico.
+            </div>
+            <br />
+            <div id="learnMoreButton">
+              <button onclick="window.location.href='#aboutMeSection';">
+                Learn More:
+              </button>
+            </div>
+          </div>
+          <!--Image of me-->
+          <div class="col">
             <img
               class="mainPictures"
-              src="Images/Pictures/ME.png"
+              src="Images/Pictures/GRADUATION ME.jpg"
               title="Hello! This is me"
-              width="225px"
-              height="225px"
               alt="A picture of Jadnell Reyes was supposed to appear here..."
             />
-          </div>
-          <!--Text Greeting-->
-          <div class="col">
+
+            <!--
             <div class="container greet">
               <h3 class="greeting">
                 <span>Hello </span>
@@ -143,12 +157,12 @@
                 <span>Portfolio.</span>
               </h4>
             </div>
-          </div>
+          --></div>
         </div>
 
         <br class="desktopSpace" />
         <br />
-
+        <!--
         <div class="row">
           <div class="col">
             <div class="infoCard">
@@ -195,10 +209,19 @@
               </ul>
             </div>
           </div>
-        </div>
-      </div>
+        </div> 
+      --></div>
     </section>
 
+    <section id="aboutMeSection" class="animatedSection leftSlide">
+      <br /><br />
+      <div class="HEADINGS">ABOUT ME</div>
+      <div class="row align-items-center">
+        <div class="col"><div class="block"></div></div>
+
+        <div class="col"><div class="block"></div></div>
+      </div>
+    </section>
     <!-- TECH STACK SECTION -->
     <section id="techStackSection" class="animatedSection">
       <div class="container">
