Subtle design changes. Simplified and reorganized lightDesign stylesheet

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 the Polytechnic University of Puerto Rico.
               </div>
 
-              <div id="learnMoreButton">
+              <div class="learnMoreButton">
                 <button onclick="window.location.href='#aboutMeSection';">
                   Learn More:
                 </button>
@@ -177,7 +177,6 @@
                   <ul id="DLCyears">
                     <li>2024-2032</li>
                     <li>2023</li>
-                    <br />
                     <br />
                     <li>2018</li>
                   </ul>
@@ -269,26 +268,27 @@
               </div>
             </div>
             <br /><br />
-            <h5 class="blockTitles">Resum&eacute;:</h5>
-
-            <div class="resumeBlock">
-              <div class="col">
-                <div class="container">
-                  <a
-                    id="resumeButton"
-                    type="button"
-                    onclick="href='https://drive.google.com/uc?id=1RnokdGCcXRmXDb7dFUEhO5OL5lO1PT3C&export=download';"
-                  >
-                    <h6>Resumé.pdf</h6>
-                    <img
-                      id="resumeDownload"
-                      src="Images/Icons/downloadArrow.svg"
-                      title="Resume Download"
-                      width="20px"
-                      height="20px"
-                      alt="Resume Download Button"
-                    />
-                  </a>
+            <div class="smallBlock">
+              <h6 class="smallBlockTitles">Resum&eacute;:</h6>
+              <div class="resumeBlock">
+                <div class="col">
+                  <div class="container">
+                    <a
+                      id="resumeButton"
+                      type="button"
+                      onclick="href='https://drive.google.com/uc?id=1RnokdGCcXRmXDb7dFUEhO5OL5lO1PT3C&export=download';"
+                    >
+                      Resumé.pdf
+                      <img
+                        id="resumeDownload"
+                        src="Images/Icons/downloadArrow.svg"
+                        title="Resume Download"
+                        width="20px"
+                        height="20px"
+                        alt="Resume Download Button"
+                      />
+                    </a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -298,7 +298,7 @@
             <h5 class="blockTitles">Toolkit:</h5>
 
             <div class="smallBlock">
-              <h6 class="blockTitles">Programming Languages:</h6>
+              <h6 class="smallBlockTitles">Programming Languages:</h6>
               <div class="row">
                 <div class="col-auto">
                   <button
@@ -481,7 +481,7 @@
               </div>
             </div>
             <div class="smallBlock">
-              <h6 class="blockTitles">Software & Hardware:</h6>
+              <h6 class="smallBlockTitles">Software & Hardware:</h6>
               <div class="row">
                 <div class="col-auto">
                   <button
@@ -663,7 +663,7 @@
               </div>
             </div>
             <div class="smallBlock">
-              <h6 class="blockTitles">Frameworks:</h6>
+              <h6 class="smallBlockTitles">Frameworks:</h6>
               <div class="row">
                 <div class="col-auto">
                   <button
@@ -766,11 +766,11 @@
               />
             </div>
             <div class="col">
-              <div id="intro">
-                <h2 id="introHello">DEPO Web Application:</h2>
+              <div>
+                <h2 class="projectTitle">DEPO Web Application:</h2>
               </div>
 
-              <div id="summary">
+              <div class="projectOverview">
                 <h5>Overview:</h5>
 
                 As a Capstone Project my classmates and I developed DEPO, a web
@@ -779,11 +779,11 @@
                 user-friendly portal for ASG employees.
               </div>
 
-              <div id="learnMoreButton">
+              <div class="learnMoreButton">
                 <button
                   onclick="window.location.href='/jadnell555.github.io/Projects/depoProject.html';"
                 >
-                  Learn More:
+                  More Details:
                 </button>
               </div>
             </div>
@@ -792,11 +792,9 @@
           <div class="row align-items-center">
             <!--Image of me-->
             <div class="col">
-              <div id="intro">
-                <h2 id="introHello">My Portfolio:</h2>
-              </div>
+              <h2 class="projectTitle">My Portfolio:</h2>
 
-              <div id="summary">
+              <div class="projectOverview">
                 <h5>Overview:</h5>
 
                 Dive into my knowledge! Explore real-world projects (personal &
@@ -805,11 +803,11 @@
                 Evolving since July 2023. (This Website)
               </div>
 
-              <div id="learnMoreButton">
+              <div class="learnMoreButton">
                 <button
                   onclick="window.location.href='/jadnell555.github.io/Projects/myPortfolioProject.html';"
                 >
-                  Learn More:
+                  More Details:
                 </button>
               </div>
             </div>
@@ -836,11 +834,9 @@
             />
           </div>
           <div class="col">
-            <div id="intro">
-              <h2 id="introHello">Haresh Quiz Game:</h2>
-            </div>
+            <h2 class="projectTitle">Haresh Quiz Game:</h2>
 
-            <div id="summary">
+            <div class="projectOverview">
               <h5>Overview:</h5>
 
               Test your knowledge with Haresh Quiz Game! A simple game developed
@@ -849,11 +845,11 @@
               functions and classes.
             </div>
 
-            <div id="learnMoreButton">
+            <div class="learnMoreButton">
               <button
                 onclick="window.location.href='/jadnell555.github.io/Projects/hareshQuizGame.html';"
               >
-                Learn More:
+                More Details:
               </button>
             </div>
           </div>
@@ -862,11 +858,9 @@
         <div class="row align-items-center">
           <!--Image of me-->
           <div class="col">
-            <div id="intro">
-              <h2 id="introHello">DC Motor Control:</h2>
-            </div>
+            <h2 class="projectTitle">DC Motor Control:</h2>
 
-            <div id="summary">
+            <div class="projectOverview">
               <h5>Overview:</h5>
 
               Harnessing an Arduino board, C++ & keyboard inputs, we built a
@@ -874,11 +868,11 @@
               pulse width modulation, then take the wheel through your keyboard.
             </div>
 
-            <div id="learnMoreButton">
+            <div class="learnMoreButton">
               <button
                 onclick="window.location.href='/jadnell555.github.io/Projects/dcMotorControlProject.html';"
               >
-                Learn More:
+                More Details:
               </button>
             </div>
           </div>
@@ -904,11 +898,9 @@
             />
           </div>
           <div class="col">
-            <div id="intro">
-              <h2 id="introHello">Step Motor Control:</h2>
-            </div>
+            <h2 class="projectTitle">Step Motor Control:</h2>
 
-            <div id="summary">
+            <div class="projectOverview">
               <h5>Overview:</h5>
 
               This project used an Arduino & C++ to command a 28BYJ-48 geared
@@ -917,11 +909,11 @@
               commands. ️
             </div>
 
-            <div id="learnMoreButton">
+            <div class="learnMoreButton">
               <button
                 onclick="window.location.href='/jadnell555.github.io/Projects/stepMotorControlProject.html';"
               >
-                Learn More:
+                More Details:
               </button>
             </div>
           </div>
@@ -994,7 +986,6 @@
                 <textarea
                   type="textarea"
                   placeholder="Message:"
-                  id="message"
                   class="formButtons"
                   name="message"
                   value="Hello how are you?"
