--- a/Projects/depoProject.html
+++ b/Projects/depoProject.html
@@ -51,41 +51,39 @@
 
   <body>
     <div id="newNavBar">
-      <div class="row">
-        <div class="col">
-          <!-- Theme Changer Button -->
-          <div id="themeChanger">
-            <button id="themeButton" type="button">
-              <img
-                id="themeChangerButtonIcon"
-                src="/jadnell555.github.io/Images/Icons/moon.svg"
-                title="Change Theme"
-                alt="Theme changing button"
-              />
-            </button>
+      <div id="navBarWrapper">
+        <div class="row row-cols-3">
+          <div class="col-sm">
+            <!-- Theme Changer Button -->
+            <div id="themeChanger">
+              <button id="themeButton" type="button">
+                <img
+                  id="themeChangerButtonIcon"
+                  src="/jadnell555.github.io/Images/Icons/moon.svg"
+                  title="Change Theme"
+                  alt="Theme changing button"
+                />
+              </button>
+            </div>
+            <div id="myName">
+              <a class="myName" title="Home" href="#"> JADNELL </a>
+              <br />
+              <a class="myName" title="Home" href="#"> HARESH </a>
+            </div>
           </div>
-          <div id="myName">
-            <a class="myName" href="/jadnell555.github.io/index.html">
-              JADNELL
-            </a>
-            <br />
-            <a class="myName" href="/jadnell555.github.io/index.html">
-              HARESH
-            </a>
+          <div class="col-sm"></div>
+          <div class="col-lg-auto">
+            <ul id="navBarItems">
+              <li class="navBarItem">
+                <a
+                  class="navBarTitles"
+                  href="/jadnell555.github.io/index.html#projectsSection"
+                >
+                  GO BACK
+                </a>
+              </li>
+            </ul>
           </div>
-        </div>
-        <div class="col"></div>
-        <div class="col-lg-auto">
-          <ul id="navBarItems">
-            <li class="navBarItem">
-              <a
-                class="navBarTitles"
-                href="/jadnell555.github.io/index.html#projectsSection"
-              >
-                GO BACK
-              </a>
-            </li>
-          </ul>
         </div>
       </div>
     </div>
@@ -93,7 +91,7 @@
     <br />
     <br />
     <section id="depoProjectSection" class="animatedSection leftSlide">
-      <div class="wrap">
+      <div class="wrapper">
         <div class="HEADINGS">
           <h1>DEPO Web Application</h1>
         </div>
@@ -425,10 +423,88 @@
         </div>
       </div>
     </section>
+    <br />
+
+    <section id="socialMediaSection">
+      <div class="wrapper">
+        <div class="row align-items-center">
+          <div class="col">
+            <h3 id="socialMediaHeading">Social Media:</h3>
+          </div>
+          <div class="col">
+            <ul id="socialMediaItems">
+              <li class="socialMediaItem">
+                <button
+                  class="socialMediaButton"
+                  type="button"
+                  onclick="window.location.href='https://www.instagram.com/j_dnll/';"
+                >
+                  <img
+                    src="/jadnell555.github.io/Images/Social Media/instagram.svg"
+                    title="Instagram"
+                    width="25px"
+                    height="25px"
+                    alt="Instagram Button"
+                  />
+                </button>
+              </li>
+              <li class="socialMediaItem">
+                <button
+                  class="socialMediaButton"
+                  type="button"
+                  onclick="window.location.href='https://www.x.com/jadnellReyes';"
+                >
+                  <img
+                    src="/jadnell555.github.io/Images/Social Media/x.svg"
+                    title="X"
+                    width="20px"
+                    height="20px"
+                    alt="X Button"
+                  />
+                </button>
+              </li>
+              <li class="socialMediaItem">
+                <button
+                  class="socialMediaButton"
+                  type="button"
+                  onclick="window.location.href='https://github.com/jadnell555';"
+                >
+                  <img
+                    src="/jadnell555.github.io/Images/Tech Stack/githubSocialMedia.svg"
+                    title="GitHub"
+                    width="30px"
+                    height="30px"
+                    alt="GitHub Button"
+                  />
+                </button>
+              </li>
+              <li class="socialMediaItem">
+                <button
+                  class="socialMediaButton"
+                  type="button"
+                  onclick="window.location.href='https://www.linkedin.com/in/jadnell-h-reyes-perez-301687280';"
+                >
+                  <img
+                    src="/jadnell555.github.io/Images/Social Media/linkedin.svg"
+                    title="LinkedIn"
+                    width="25px"
+                    height="25px"
+                    alt="LinkedIn Button"
+                  />
+                </button>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end contact section-->
 
     <footer>
-      Copyright © 2023. All Rights Reserved. Created by Jadnell H. Reyes
-      P&eacute;rez
+      <div class="wrapper">
+        Copyright © 2023. All Rights Reserved. Created by Jadnell H. Reyes
+        P&eacute;rez
+      </div>
     </footer>
 
     <!-- SCRIPTS -->
